# pytorch_dlprim

./: .gitmodules  CLTensor.h  CMakeLists.txt  LICENSE  README-build.md  README.md  benchark_all.sh  benchmark.md  benchmark_all.sh  benchmark_eval.sh  benchmark_train.sh  mnist.py  op.cpp  test.py
benchmarks/v0.2.0/: summary.md  test-A380-opencl-batch32.txt  test-A380-xpu-batch32.txt  test-gtx960-cuda-batch32.txt  test-gtx960-opencl-batch32.txt  test-rx6600-opencl-batch64.txt  test-rx6600-rocm-batch64.txt  train-A380-opencl-small.txt  train-A380-xpu-small.txt  train-gtx960-cuda-small.txt  train-gtx960-opencl-small.txt  train-rx6600-opencl-large.txt  train-rx6600-rocm-large.txt
python/pytorch_ocl/: __init__.py
src/: CLTensor.cpp  CLTensor.h  guard.cpp  loss_ops.cpp  norm_ops.cpp  pointwise_ops.cpp  python_iface.cpp  random_ops.cpp  registeration.cpp  tensor_ops.cpp  utils.cpp  utils.h  vision_ops.cpp
tests/: test_op.py  test_print.py  validate_network.py
tests/big_samples/: cat.ppm  dog.ppm  goldfish.ppm  parrot.ppm
tests/samples/: cat.ppm  dog.ppm  goldfish.ppm  parrot.ppm
tests/small_samples/: cat.ppm  dog.ppm  goldfish.ppm  parrot.ppm
